public/css/fieldtest.css
body{padding-top:30px;font-family:Calibri, Arial, Helvetica, sans-serif;text-align:center}
header{background:#6d6e71;top:0;left:0;text-align:left;width:100%;position:fixed;z-index:999999999;border-bottom:1px solid #333;padding:4px 0 5px 0;height:38px;}


h1{font-size:40px}
body.manage h1
	{
	margin-bottom: 0px;
	z-index: 1;
	float: left;
	}

body.manage h2
	{
	float: left;
	width: 100%;
	margin-top: 20px;
	margin-bottom: 0;
	}
		
h2{font-size:30px;margin:0;}
h3{margin:0px 0 0 0;padding:0;font-size:18px;color:#999999 !important;font-weight:normal !important;}
.tablestats{border-right:1px solid #ccc;}
.tablestats th{background-color:#efefef;}

.tablestats td, .tablestats th{border-bottom:1px solid #ccc;border-left:1px solid #ccc;padding:8px;margin:1px 0;text-align:center}
.tablestats  tr:hover{background:#f7f8f9}
.tablestats{border-top:1px solid #ccc;margin-bottom:40px;-moz-box-shadow: 0 1px 2px #ccc;background:#fff}
.tablestats.continue{margin-bottom:4px !important;}
.logo{float:left;border:0;background:url(../img/logo.png) 0px 0px no-repeat;width:145px;height:31px; background-size: 130px 26px;}

.error-symbol{background:url(../img/red-error-symbol.png) 0 0 no-repeat; position:absolute;margin:42px 0 0 -30px;display:block;width:23px;height:23px;background-size:21px 19px}

body.manage th.header
	{
	float: none;
	width: auto;
	color: #000;
	}


.field
	{
	float: left;
	width: 35%;
	margin: 10px 0 20px 0;
	}

.field h3
	{
	float: left;
	width: auto;
	margin-right: 40px;
	font-weight: bold !important;
	font-family: Calibri, Arial, Helvetica, sans-serif;
	font-size: 18px;
	color: #000 !important;
	}

body.manage .head
	{
	float: left;
	width: 100%;
	margin-bottom: 8px;
	}

body.manage th
	{
	font-size: 16px;
	}

body.manage .field .value
	{
	font-size: 16px;
	}

body.manage .urls
	{
	float: left;
	width: 80%;
	text-align: left;
	}

body.manage .urls a
	{
	display: block;
	}

body.manage .buttons
	{
	float: right;
/*
	width: 10%;
*/
	}
body.manage a.change
	{
	width: 16px;
	height: 16px;
	margin-top: 24px;
	text-indent: -10000px;
	position: absolute;
	background: url(../img/change_password.png) 0 0 no-repeat;
	}
	body.manage tr.disabled a.change
		{
		display: none;
		}
body.manage a.copy
	{
	width: 16px;
	height: 16px;
	margin-top: 24px;
	text-indent: -10000px;
	position: absolute;
	background: url(../img/copy_url.gif) 0 0 no-repeat;
	}

body.manage .actions a
	{
	display: block;
	width: 18px;
	height: 18px;
	margin: -7px 0 0 16px !important;
	text-indent: -10000px;
	position: absolute;
	}

	body.manage .actions a.change
		{
		margin-left: 5px !important;
		background: url(../img/change_password.png) 0 0 no-repeat;
		}
		
	body.manage .actions a.cancel
		{
		margin-left: 33px !important;
		background: url(../img/cancel-job.png) 0 0 no-repeat;
		}
	body.manage .actions a.archive
		{
		margin-left: 61px !important;
		background: url(../img/archive-job.png) 0 1px no-repeat;
		}
	body.manage .actions a.resume
		{
		margin-left: 33px !important;
		background: url(../img/resume-job.png) 0 0px no-repeat;
		}
	body.manage .actions a.unarchive
		{
		margin-left: 61px !important;
		background: url(../img/unarchive-job.png) 0 1px no-repeat;
		}

	body.manage tr[data-status=active] .actions a.resume,
	body.manage tr[data-status=active] .actions a.unarchive,
	body.manage tr[data-status=cancelled] .actions a.cancel,
	body.manage tr[data-status=cancelled] .actions a.archive,
	body.manage tr[data-status=cancelled] .actions a.unarchive,
	body.manage tr[data-status=archived] .actions a.archive,
	body.manage tr[data-status=archived] .actions a.resume
		{
		display: none;
		}

		
body.manage a.cancel-project,
body.manage a.archive-project,
body.manage a.resume-project,
body.manage a.unarchive-project
	{
	display: inline-block;
	position: relative;
	width: 18px;
	height: 18px;
	text-indent: -10000px;
	margin-left: 10px;
	top: 5px;
	background: url(../img/cancel-job.png) 0 0 no-repeat;
	
/*
	width: 18px;
	height: 18px;
	margin-left: 40px;
	margin-top: 24px;
	text-indent: -10000px;
	position: absolute;
	background: url(../img/icon_delete_02.png) 0 0 no-repeat;
*/
	}
	body.manage .article.allCancelled a.cancel-project
		{
		display: none;
		}	

body.manage a.archive-project
	{
	background: url(../img/archive-job.png) 0 1px no-repeat;
	}
	body.manage .article.allArchived a.archive-project,
	body.manage[data-filter-status=archived] a.archive-project,
	body.manage[data-filter-status=cancelled] a.archive-project
		{
		display: none;
		}
body.manage a.resume-project
	{
	background: url(../img/resume-job.png) 0 0 no-repeat;
	}
	body.manage[data-filter-status=archived] a.resume-project
		{
		display: none;
		}

body.manage a.unarchive-project
	{
	background: url(../img/unarchive-job.png) 0 1px no-repeat;
	}
	body.manage[data-filter-status=cancelled] a.unarchive-project
		{
		display: none;
		}

	
body.manage tr.alt
	{
	background: #f8f8f8;
	}

body.manage .progress div.progress-bar
	{
	border: 1px solid #999;
	height: 16px;
	background: #fff;
	}

body.manage .progress div span
	{
	float: left;
	height: 16px;
	background: #999;
	}

body.manage .article
	{
	float: left;
	display: block;
	width: 100%;
	margin-bottom: 20px;
	}
	body.manage .article.invisible
		{
		display: none;
		}
/*
.tablefilter
	{
	float: right;
	padding-top: 24px;
	}

.tablefilter label
	{
	color: #666;
	}
*/
body.manage object
	{
	margin-bottom: 25px !important;
	margin-left: 10px !important;
	}

body.manage .meter
	{
	width: 100%;
	margin-top: 5px !important;
	}

body.manage th.create-date
	{
	min-width: 150px;
	}
	
body.manage th.job-detail
	{
	width: 50%;
	}

body.manage th.words
	{
	min-width: 130px;
	}
	
body.manage th.progress
	{
	width: 15%;
	}

body.manage th.actions
	{
	width: 8%;
	}

body.manage tr.row
	{
	display: none;
	}
	body.manage[data-filter-status=active] tr[data-status=active]
		{
		display: table-row;
		}

/*	
body.manage tr.disabled
	{
	display: none;
	}
	body.manage div.showCancelled tr.disabled
		{
		display: table-row;
		}

body.manage tr.archived
	{
	display: none;
	}
*/
body.manage tr[data-status=archived]
	{
	color: #C41919;
	display: none;
	}
	body.manage[data-filter-status=archived] tr[data-status=archived]
		{
		display: table-row;
		}
/*
	body.manage .article.showArchived tr[data-status=archived]
		{
		display: table-row;
		}
*/		
body.manage tr[data-status=cancelled]
	{
	color: #999;
	display: none;
	}
	body.manage[data-filter-status=cancelled] tr[data-status=cancelled]
		{
		display: table-row;
		}
/*
	body.manage .article.showCancelled tr[data-status=cancelled]
		{
		display: table-row;
		}
*/	
body.manage .article.allCancelled thead th
	{
	color: #999;
	}
/*
	body.manage .article.showCancelled.allCancelled thead th
		{
		color: #000 !important;
		}
*/
body.manage td.words
	{
	text-align: right;
	}

th.header {
	background: #efefef url(../img/bg.gif) right center no-repeat !important;
}
th.headerSortUp {
	background: #efefef url(../img/asc.gif) right center no-repeat !important;
}
th.headerSortDown {
	background: #efefef url(../img/desc.gif) right center no-repeat !important;
}

body.manage .pagination
	{
	border: none;
	margin-top: 40px;
	}
	body.manage .pagination.bottom
		{
		margin-bottom: 40px;
		}
body.manage .pagination a,
body.manage .pagination strong
	{
	border: none;
	color: #000;
	padding-left: 7px !important;
	padding-right: 7px !important;
	text-decoration: underline;
	}
body.manage .pagination strong
	{
	color: #999;
	margin-right: 0 !important;
	text-decoration: none;
	}



body.manage .pagination a:hover
	{
	text-decoration: underline;
	}

body.manage .pagination a:active
	{
	box-shadow: none;
	-webkit-box-shadow: none;
	}

body.manage .pagination a.previous
	{
	color: #000;
/*
	border-right: 1px solid #999;
*/
	}
	
body.manage .pagination a:hover
	{
	background: none !important;
	}

body.manage header .filter
	{
	display: block !important;
	margin-top: -2px !important;
	}

body.manage .search
	{
	position: absolute;
	left: -99999px;
	}

body.manage .searchbox
	{
	display: none;
	position: fixed;
	float: left;
	width: 100%;
	min-height: 20px;
	font-size:12px;
	border-bottom: 1px solid #666;
	background:#efefef url(../img/point.gif) 0 0 repeat-x;
	margin-top: 18px;
	padding:5px 4% 0px 4%;
	-moz-box-shadow: 0 1px 3px #666;
	-webkit-box-shadow: 0 1px 10px #666;
	-moz-border-radius-bottom-right:2px;
	-webkit-border-bottom-right-radius:2px;
	-moz-border-radius-bottomleft:2px;
	-webkit-border-bottom-left-radius:2px;
	z-index:10;
	}
	body.manage.filterOpen .searchbox
		{
		display: block;
		}
	
body.manage .searchbox label
	{
	display: inline;
	width: auto !important;
	margin-right: 5px;
	text-transform: uppercase;
	}

body.manage .searchbox #exec-filter
	{
	float: right;
	}

body.manage .searchbox .block
	{
	float: left;
	margin-right: 20px;
	text-align: left;
	margin-top: 2px;
	}
body.manage .searchbox .block.right
	{
	float: right !important;
	margin-right: 8% !important;
	margin-top: -5px !important;
	}

body.manage.filterOpen #contentBox
	{
	margin-top: 40px;
	}

body.manage input[type=button],
body.manage input[type=submit]
	{
	width: 80px !important;
	}

body.manage .message
	{
	display: none;
	background: #ffde33;
	position: absolute;
	margin: 30px 35%;
	width: 30%;
	padding: 4px;
	text-align: center;
	}
	body.manage.filterOpen .message
		{
		margin-top: 60px !important;
		}
body.manage .message:hover
	{
	background: #ffde33 !important;

	}

body.manage .project-filter
	{
	display: inline;
	margin-left: 20px;
	}

body.manage.filterActive .project-filter
	{
	display: none !important;
	}
/*
body.manage.filterActive tr[data-status=archived],
body.manage.filterActive tr[data-status=cancelled]
	{
	display: table-row !important;
	}
*/
/*
body.manage .article[data-hascancelled='0'] .project-filter.cancelled
	{
	display: none;
	}

body.manage .article[data-hasarchived='0'] .project-filter.archived
	{
	display: none;
	}
*/
body.manage #spinner
	{
	display: none;
	position: fixed;
	margin: 25px 0 0 50%;
	}

body.manage.loading #spinner
	{
	display: block;
	}

body.manage .article.msg
	{
	width: 100%;
	margin: 20px auto;
	font-size: 26px;
	font-style: italic;
	color: #999;
	}

body.manage .project-details
	{
	width: 100%;
	display: inline;
	height: 30px;
	}
body.manage .id-project
	{
	color: #999;
	}

body.manage .urls .langs
	{
	font-size: 120%;
	}
	
body.manage #display
	{
	display: inline-block;
	color: #fff;
	margin-left: 100px;
	margin-top: 22px;
	}
	
body.manage #display a
	{
	margin: 0 !important;
	color: yellow;
	font-weight: bold;
	text-decoration: none;
	}

body.manage #search-projectname
	{
	width: 170px !important;
	}

